--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: To be included
+title: A GitHub page
 author: Passapartout
-description: Yet to comee
+description: A page made in relation to a GitHub course called skill-github-pages.
