--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: A GitHub page
 author: Passapartout
-description: A page made in relation to a GitHub course called skill-github-pages.
+description: A page made in relation to a GitHub course called Github-Pages.
